MODLD-73: extent.note and instance.note fix